apps/node-red/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: node-red-ingress
  namespace: node-red
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-red
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 1880
          protocol: TCP
